# flaskr_tutorial

./: README.md  pyproject.toml
flaskr/: __init__.py  db.py
