[tool.poetry]
name = "flaskr-tutorial"
version = "0.1.0"
description = "The basic blog app built in the Flask tutorial."
authors = ["Ruben Jimenez Andreu <rubenjmnz93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.3.2"
ruff = "^0.6.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
